--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -181,7 +181,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/already_Havean_Account"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
