--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,13 +60,14 @@
             android:textColor="#FFF" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/skip_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="15dp"
-            android:text="Continue without signing"
+            android:gravity="center"
+            android:text="Skip"
             android:textColor="#FFFFFF"
+            android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
 </RelativeLayout>
